2010-07-11  Michael Hutchinson  <mhutchinson@novell.com>

	* gtk-gui/gui.stetic: Flsuh.

	* Makefile.am:
	* gtk-gui/objects.xml: Removed objects.xml from the
	  Makefile.am since it's not in the project file and was
	  breaking the build when MD added a resource ID to the
	  makefile.

2010-07-11  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.addin.xml: The "navigate forward/back"
	  commands now use the Xcode binding, and a similar binding on
	  Windows so they no longer block the subword navigation. Also
	  add a Mac binding for "move selection up/down"

2010-07-09  Levi Bard  <levi@unity3d.com>

	* MonoDevelop.Ide/RootWorkspace.cs:
	  Implement less disk-intensive project autoupdate.

2010-07-09  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Components/SearchEntry.cs: taken out event
	  handler on destroy.

2010-07-08  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* MonoDevelop.Ide.csproj:
	* MonoDevelop.Components.Diff/Diff.cs:
	* MonoDevelop.Components/DropDownBoxListWindow.cs: Worked on
	  version control gui.

2010-07-08  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Gui/ViewCommandHandlers.cs: Removed unused
	  event handler (deletetolineend is handled by the text
	  editor).

2010-07-06  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Components/PathBar.cs: Changed redrawing.

2010-07-06  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Components/PathBar.cs: Added bounds check.

2010-07-06  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Components/PathBar.cs: Improved resizing
	  behavior.

2010-07-06  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Components/PathBar.cs: fixed multi monitor
	  support.

2010-07-06  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Components/PathBar.cs: Path bar now supports a
	  right hand side.

2010-07-05  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Gui/Document.cs:
	* MonoDevelop.Ide.Gui/Workbench.cs:
	* MonoDevelop.Ide.Gui/TextEditor.cs: